--- a/.github/workflow/Analysis.yml
+++ b/.github/workflow/Analysis.yml
@@ -16,4 +16,4 @@ jobs:
     - name: Install
       run: sudo apt-get install cppcheck
     - name: analyse
-      run: cppcheck --enable=all Miniproject_C/3_implementation
+      run: cppcheck --enable=all M1_Vending Machine/3_implementation
