--- a/.github/workflows/Build_Windows.yml
+++ b/.github/workflows/Build_Windows.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: make -C M1_Vending Machine/3_Implementation
+      run: make -C M1_Vending_machine/3_Implementation
